# handy-rs

./: Cargo.toml  README.md
configura/: Cargo.toml  README.md
configura/benches/: config_bench.rs
configura/src/: errors.rs  formats.rs  lib.rs
handy-rs/: Cargo.toml  README.md
handy-rs/benches/: bench_divan.rs  bench_main.rs  pattern.rs
handy-rs/benches/benchmarks/: collections.rs  human.rs  iter.rs  mod.rs  parse.rs  pattern.rs
handy-rs/benches/fs/: dir_walk.rs  mod.rs
handy-rs/benches/helper/: mod.rs  tempdir.rs
handy-rs/src/: collections.rs  errors.rs  fs.rs  human.rs  iter.rs  lib.rs  parse.rs  pattern.rs
handy-rs/src/helper/: mod.rs  tempdir.rs
tabela/: Cargo.toml  README.md
tabela/src/: errors.rs  lib.rs
