[package]
name = "handy-rs"
description = "A collection of utilities for my Rust projects"
version = "2.1.0"
authors = ["DarkCeptor44"]
edition = "2021"
rust-version = "1.78"
license = "MIT"
keywords = ["handy", "utilities", "pattern", "human", "parse"]
categories = [
    "development-tools",
    "algorithms",
    "data-structures",
    "text-processing",
]
repository = "https://github.com/DarkCeptor44/handy-rs"
homepage = "https://github.com/DarkCeptor44/handy-rs"

[lib]
name = "handy"

[features]
default = []
full = ["collections", "human", "itertools", "parse", "pattern", "tempdir"]

collections = []
human = ["dep:num-traits"]
itertools = []
parse = []
pattern = ["dep:levenshtein", "dep:regex"]
tempdir = ["dep:anyhow", "dep:rayon", "dep:tempfile"]

[dependencies]
anyhow = { version = "^1", optional = true }
levenshtein = { version = "^1", optional = true }
num-traits = { version = "^0.2", optional = true }
rayon = { version = "^1", optional = true }
regex = { version = "^1", optional = true }
tempfile = { version = "^3", optional = true }
thiserror = "^2"

[dev-dependencies]
criterion = "^0.5"
rayon = "^1"
rand = "^0.9"
tempfile = "^3"
temp-env = "^0.3"

[[bench]]
name = "bench_main"
harness = false

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["full"]
